# mpi-hpc

./: .gitignore  CMakeLists.txt  README.md  a01-02-local.sh  a01-04-local.sh  a01-local.sh  a01.sh  a02.sh  a03-01-serial.sh  a03-02-deboor-cdf.sh  a03-02-deboor.sh  a03-03-sor.sh  build.sh  build_cmake.sh.inc  config.sh  gen_node_list.sh  requirements.txt  run_tests.sh
src/a01/: analysis.py  fanout.cpp  globsum.cpp  lsq_fit.py  ring.cpp  scalability_math.py
src/a02/: a2p1d-efficiency.eps  matrix.h  parallel_numerical.cpp  parallel_numerical.h  plot_output.py  quad_spline_interp_builtin.py  scalability_analysis.py  serial_numerical.cpp  serial_numerical.h  spline_problem.cpp
src/a03/: deboor_common.cpp  deboor_common.h  deboor_parallel.h  deboor_serial.h  order.py  plot_nit.py  plot_output_2d.py  plot_timing.py  plot_timing_serial.py  sor.h  spline_2d_problem.cpp
src/common/: eigen_helpers.h  matrix.cpp  matrix.h  mpi_eigen_helpers.cpp  mpi_eigen_helpers.h  mpi_eigen_helpers_tests.cpp  mpi_helpers.h  mpi_stopwatch.cpp  mpi_stopwatch.h  parallel_numerical.cpp  parallel_numerical.h  serial_numerical.cpp  serial_numerical.h  utils.cpp  utils.h
